--- a/modelo/index.html
+++ b/modelo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página IA - Alterada no GITHUB web</title>
 </head>
 <body>
     <h1>Nome da página</h1>
